Delete button moved to modal footer, delete button is grey when inactive, red when active

--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -81,12 +81,14 @@
 }
 
 #delete-button-grains, #delete-button-meats, #delete-button-dairy, #delete-button-fruits, #delete-button-vegetables {
-    float: center;
-    color: rgb(255, 0, 0);
+    position: relative;
+    top: 45%;
+    left: 2%;
+    color: grey;
     font-size: 13pt;
     line-height: 0;
-    display: none;
-    cursor:pointer;
+    display: block;
+    cursor: default;
     user-select: none;
 }
 .add-slider {
@@ -103,10 +105,26 @@
     transition-duration: 0.5s;
     transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   }
+  #delete-slider-vegetables {
+    max-height: 0px;
+    overflow-y: hidden;
+    transition-property: all;
+    transition: 0.5s;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  }
+  .delete-slider-opened {
+    height: 200px;
+    overflow-y: hidden;
+    transition-property: all;
+    transition: 0.5s;
+    transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+}
 
-/**************************************************************************************************************************************************************
-MEDIA QUERIES
-***************************************************************************************************************************************************************/
+/********************************************
+*                                           *
+*               MEDIA QUERIES               *
+*                                           *
+********************************************/
 /* for 414px or less */
 @media screen and (max-width: 414px) {
   html {
@@ -290,9 +308,11 @@ MEDIA QUERIES
   }
 }
 
-/******************************************************************************************************************************************************
-MEDIA QUERIES
-*******************************************************************************************************************************************************/
+/********************************************
+*                                           *
+*               MEDIA QUERIES               *
+*                                           *
+********************************************/
 /* for 415px or more */
 @media screen and (min-width: 415px) {
   html {
