--- a/Website/css/fridgepg3.css
+++ b/Website/css/fridgepg3.css
@@ -2,6 +2,14 @@
     0% { transform: rotate(3deg); }
     100% { transform: rotate(-3deg); }
 }
+
+body {
+    background-color: transparent !important;
+}
+#google_translate_element {
+    z-index: -1000;
+    background: transparent;
+}
 .hidden {
     display: none;
 }
@@ -107,7 +115,7 @@
     transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   }
   #add-slider-grains.opened, #add-slider-meats.opened, #add-slider-dairy.opened, #add-slider-fruits.opened, #add-slider-vegetables.opened{
-    max-height: 200px;
+    max-height:250px;
     overflow: hidden;
     transition-property: all;
     transition-duration: 0.5s;
@@ -129,43 +137,84 @@
     background-color: #84f779;
 }
 label {
-    display: block;
-    padding-left: 5%;
+    display: inline-block;
+    font-weight: normal;
 }
 input {
     background-color: #f1f1f1;
+    display: inline-block;
 }
 ::placeholder {
+    color: rgba(96, 96, 194, 0.432);
+}
+.autocomplete {
+    height: 50px;
+}
+.form-group {
+    margin-top: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    max-height: 50px;
+    padding-bottom: 0px;
+}
+.input-label {
+    margin: 0;
+    padding-left: 8%;
+    color: white;
+    font-weight: normal;
+}
+.input-icon {
+    position: relative;
+    display: inline-block;
+    transform: scale(.85);
+    border-right: 0px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: #f79178;
+     /*to remove space between this and the input*/
+}
+input[type=text] {
+    width: calc(90%);
+    border: 1px solid #81818196;
+    padding: 1%;
+    margin-left: 1%;
+    border-radius: 5px;
+    color: rgb(96, 96, 194);
+}
+    ::-webkit-datetime-edit { padding-left: 5px; }
+    ::-webkit-datetime-edit-text { color: rgb(96, 96, 194); padding: 0 0.3em; }
+    ::-webkit-datetime-edit-month-field { color: rgb(96, 96, 194); }
+    ::-webkit-datetime-edit-day-field { color: rgb(96, 96, 194); }
+    ::-webkit-datetime-edit-year-field { color: rgb(96, 96, 194); }
+    ::-webkit-inner-spin-button { display: none; }
+    ::-webkit-calendar-picker-indicator { background: #f1f1f1; }
+
+    input[type=date] {
+    margin-left: 1%;
+    width: calc(90%);
+    border: 1px solid #8181819f;
+    padding: 0%;
+    border-radius: 5px;
     color: rgb(96, 96, 194);
 }
 input[type=submit] {
-    margin-left: 5%;
-    border-radius: 5px;
-    color: rgb(96, 96, 194);
-}
-input[type=text], input[type=date] {
-    display: block;
-    margin: 0 auto;
+    margin: 0 5%;
+    padding: 3%;
     width: 90%;
-    border: 1px solid #81818175;
-    padding: 2%;
-    border-radius: 5px;
-    color: rgb(96, 96, 194);
+    border: none;
+    border-radius: 5px solid rgb(154, 154, 155);
+    color: white;
+    background-color: rgb(154, 154, 155);
 }
 .autocomplete-items {
     position: absolute;
-    border: 1px solid #d4d4d4;
-    border-bottom: none;
-    border-top: none;
     z-index: 99;
     /*position the autocomplete items to be the same width as the container:*/
-    top: 100%;
-    left: 0;
-    right: 0;
     color: rgb(96, 96, 194);
   }
   .autocomplete-items div {
-    padding: 10px;
+    padding: 0.5%;
+    padding-left: 1%;
     cursor: pointer;
     background-color: #fff; 
     border-bottom: 1px solid #d4d4d4; 
@@ -185,16 +234,15 @@ input[type=text], input[type=date] {
 
 /********************************************
 *                                           *
-*               IPHONE 5/SE                 *
+*                 IPHONE 4                  *
 *                                           *
 ********************************************/
-
 @media only screen 
-    and (min-device-width: 320px)
-    and (max-device-height: 568px)
+    and (min-width: 320px)
+    and (max-device-height: 480px)
     and (-webkit-device-pixel-ratio : 2) {
         html {
-            background: url("../images/Fridge_iPhone5SE.png") no-repeat center center fixed;
+            background: url("../images/Fridge_iPhone4.png") no-repeat center center /*fixed*/;
             /*background-size: cover;*/
           }
           img {
@@ -208,10 +256,216 @@ input[type=text], input[type=date] {
         }
           .fridge_container {
             position: relative;
-            /*1st level: 85px
-              2nd level: 520px
-              3rd level: 1000px
-              4th level: 1415px*/
+          }
+          #camera {
+              position: absolute;
+              top: -10px;
+              left: -15px;
+          }
+          #plus {
+              position: absolute;
+              top: 10px;
+              left: 125px;
+          }
+          #logout {
+              position: absolute;
+              top: -35px;
+              left: 200px;
+              transform: scale(0.6);
+          }
+          #toast {
+              position: absolute;
+              top: 65px;
+              left: 25px;
+          }
+          #steak {
+              position: absolute;
+              top: 220px;
+              left: -40px;
+          }
+          #milk {
+              position: absolute;
+              top: 220px;
+              left: 90px;
+          }
+          #banana {
+              position: absolute;
+              top: 360px;
+              left: -40px;
+          }
+          #cabbage {
+              position: absolute;
+              top: 360px;
+              left: 90px;
+          }
+          .modal-header-meats {
+              color:#fff;
+              padding:9px 15px;
+              border-bottom:1px dotted #eee;
+              background-color: #f79178;
+              -webkit-border-top-left-radius: 5px;
+              -webkit-border-top-right-radius: 5px;
+              -moz-border-radius-topleft: 5px;
+              -moz-border-radius-topright: 5px;
+               border-top-left-radius: 5px;
+               border-top-right-radius: 5px;
+          }
+          .modal-footer-meats {
+            color:#fff;
+            height: 35px;
+            background-color: #f79178;
+            -webkit-border-bottom-left-radius: 5px;
+            -webkit-border-bottom-right-radius: 5px;
+            -moz-border-radius-bottomleft: 5px;
+            -moz-border-radius-bottomright: 5px;
+            border-bottom-left-radius: 5px;
+            border-bottom-right-radius: 5px;
+           }
+          .modal-header-fruits {
+              color:#fff;
+            padding:9px 15px;
+            border-bottom:1px dotted #eee;
+            background-color: #f3f051;
+            -webkit-border-top-left-radius: 5px;
+            -webkit-border-top-right-radius: 5px;
+            -moz-border-radius-topleft: 5px;
+            -moz-border-radius-topright: 5px;
+             border-top-left-radius: 5px;
+             border-top-right-radius: 5px;
+          }
+          .modal-footer-fruits {
+            color:#fff;
+            height: 35px;
+            background-color: #f3f051;
+            -webkit-border-bottom-left-radius: 5px;
+            -webkit-border-bottom-right-radius: 5px;
+            -moz-border-radius-bottomleft: 5px;
+            -moz-border-radius-bottomright: 5px;
+             border-bottom-left-radius: 5px;
+             border-bottom-right-radius: 5px;
+          }
+          .modal-header-vegetables {
+              color:#fff;
+            padding:9px 15px;
+            border-bottom:1px dotted #eee;
+            background-color: #84f779;
+            -webkit-border-top-left-radius: 5px;
+            -webkit-border-top-right-radius: 5px;
+            -moz-border-radius-topleft: 5px;
+            -moz-border-radius-topright: 5px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+          }
+          .modal-footer-vegetables {
+            color:#fff;
+            height: 35px;
+            background-color: #84f779;
+            -webkit-border-bottom-left-radius: 5px;
+            -webkit-border-bottom-right-radius: 5px;
+            -moz-border-radius-bottomleft: 5px;
+            -moz-border-radius-bottomright: 5px;
+             border-bottom-left-radius: 5px;
+             border-bottom-right-radius: 5px;
+          }
+          .modal-header-dairy {
+              color:rgb(7, 7, 7);
+              padding: 9px 15px;
+              border-bottom:1px dotted #eee;
+              background-color: #f0f8ff;
+              -webkit-border-top-left-radius: 5px;
+              -webkit-border-top-right-radius: 5px;
+              -moz-border-radius-topleft: 5px;
+              -moz-border-radius-topright: 5px;
+               border-top-left-radius: 5px;
+               border-top-right-radius: 5px;
+          }
+          .modal-footer-dairy {
+            color:rgb(7, 7, 7);
+            height: 35px;
+            background-color: #f0f8ff;
+            -webkit-border-bottom-left-radius: 5px;
+            -webkit-border-bottom-right-radius: 5px;
+            -moz-border-radius-bottomleft: 5px;
+            -moz-border-radius-bottomright: 5px;
+             border-bottom-left-radius: 5px;
+             border-bottom-right-radius: 5px;
+          }
+          .modal-header-grains {
+              color:rgb(0, 0, 0);
+              padding:9px 15px;
+              border-bottom:1px dotted #eee;
+              background-color: #e9b72d75;
+              -webkit-border-top-left-radius: 5px;
+              -webkit-border-top-right-radius: 5px;
+              -moz-border-radius-topleft: 5px;
+              -moz-border-radius-topright: 5px;
+               border-top-left-radius: 5px;
+               border-top-right-radius: 5px;
+          }
+          .modal-footer-grains {
+            color:#fff;
+            height: 35px;
+            background-color: #e9b72d75;
+            -webkit-border-bottom-left-radius: 5px;
+            -webkit-border-bottom-right-radius: 5px;
+            -moz-border-radius-bottomleft: 5px;
+            -moz-border-radius-bottomright: 5px;
+             border-bottom-left-radius: 5px;
+             border-bottom-right-radius: 5px;
+          }
+          .add {
+            position: absolute;
+            left: 204px;
+            top: 35px;
+            transform: scale(0.65);
+          }
+          .add:active {
+              transform: scale(0.85);
+              filter: brightness(1.2);
+              transition: all 0.20s;
+          }
+          #select-all-grains, #select-all-meats, #select-all-dairy, #select-all-fruits, #select-all-vegetables {
+            position: relative;
+            top: 35px;
+            left: 68%;
+            color: rgb(96, 96, 194);
+            font-size: 13pt;
+            line-height: 0;
+            display: block;
+            cursor: pointer;
+            user-select: none;
+            opacity: 0;
+        }
+        
+          .override-position {
+              position:absolute;
+              top: 154px;
+          }
+}  
+/********************************************
+*                                           *
+*               IPHONE 5/SE                 *
+*                                           *
+********************************************/
+@media only screen 
+    and (min-width: 320px)
+    /*and (max-device-height: 568px)*/
+    and (-webkit-device-pixel-ratio : 2) {
+        html {
+            background: url("../images/Fridge_iPhone5SE.png") no-repeat center center /*fixed*/;
+            /*background-size: cover;*/
+          }
+          img {
+            transform: scale(0.45);
+            height: auto;
+          }
+        
+          .hover:active {
+            transform: scale(0.50);
+            filter: drop-shadow(16px 16px 16px #ffffff);
+        }
+          .fridge_container {
+            position: relative;
           }
           #camera {
               position: absolute;
@@ -405,11 +659,10 @@ input[type=text], input[type=date] {
 ********************************************/
 @media only screen
     and (min-device-width: 360px)
-    and (max-device-height: 640px)
+    /*and (max-device-height: 640px)*/
     and (-webkit-device-pixel-ratio: 2) {
-
   html {
-    background: url("../images/Fridge_Galaxy_S5.png") no-repeat center center fixed;
+    background: url("../images/Fridge_Galaxy_S5.png") no-repeat center center /*fixed*/;
   }
   img {
     transform: scale(0.5);
@@ -620,10 +873,10 @@ input[type=text], input[type=date] {
 
 @media only screen 
     and (min-device-width: 375px)
-    and (max-device-height: 667px)
+    /*and (max-device-height: 667px)*/
     and (-webkit-device-pixel-ratio : 2) {
         html {
-            background: url("../images/Fridge_iPhone678.png") no-repeat center center fixed;
+            background: url("../images/Fridge_iPhone678.png") no-repeat center center /*fixed*/;
             /*background-size: cover;*/
           }
           img {
@@ -832,12 +1085,12 @@ input[type=text], input[type=date] {
 *                                           *
 ********************************************/
 @media only screen
-    and (min-device-width: 375px)
-    and (max-device-height: 812px)
+    and (min-width: 375px)
+    /*and (max-device-height: 812px)*/
     and (-webkit-device-pixel-ratio: 3) {
 
     html {
-        background: url("../images/Fridge_iPhoneX.png") no-repeat center center fixed;
+        background: url("../images/Fridge_iPhoneX.png") no-repeat center center /*fixed*/;
         /*background-size: cover;*/
       }
       img {
@@ -1040,18 +1293,20 @@ input[type=text], input[type=date] {
           top: 156px;
       }
 }
+
 /********************************************
 *                                           *
-*                  PIXEL 2                  *
+*             IPHONE 6+ /7+ /8+             *
 *                                           *
 ********************************************/
+
 @media only screen
-    and (min-device-width: 411px)
-    and (max-device-height: 731px)
-    and (-webkit-device-pixel-ratio: 2) {
+    and (min-width: 414px)
+    /*and (max-device-height: 736px)*/
+    and (-webkit-device-pixel-ratio: 3) {
 
   html {
-    background: url("../images/Fridge_Pixel2.png") no-repeat center center fixed;
+    background: url("../images/Fridge_iPhone678Plus.png") no-repeat center center /*fixed*/;
   }
   img {
     transform: scale(0.55);
@@ -1064,10 +1319,6 @@ input[type=text], input[type=date] {
 }
   .fridge_container {
     position: relative;
-    /*1st level: 85px
-      2nd level: 520px
-      3rd level: 1000px
-      4th level: 1415px*/
   }
   #camera {
       position: absolute;
@@ -1255,16 +1506,14 @@ input[type=text], input[type=date] {
 }
 /********************************************
 *                                           *
-*             IPHONE 6+ /7+ /8+             *
+*           ALL DEVICES OVER  415PX         *
 *                                           *
 ********************************************/
-@media only screen
-    and (min-device-width: 414px)
-    and (max-device-height: 736px)
-    and (-webkit-device-pixel-ratio: 3) {
-
+/* for 415px or more */
+@media screen 
+    and (min-width: 415px) {
   html {
-    background: url("../images/Fridge_iPhone678Plus.png") no-repeat center center fixed;
+    background: url("../images/Fridge_Pixel2.png") no-repeat center center /*fixed*/;
   }
   img {
     transform: scale(0.55);
@@ -1277,10 +1526,6 @@ input[type=text], input[type=date] {
 }
   .fridge_container {
     position: relative;
-    /*1st level: 85px
-      2nd level: 520px
-      3rd level: 1000px
-      4th level: 1415px*/
   }
   #camera {
       position: absolute;
@@ -1460,7 +1705,6 @@ input[type=text], input[type=date] {
     user-select: none;
     opacity: 0;
 }
-
   .override-position {
       position:absolute;
       top: 158px;
@@ -1471,11 +1715,11 @@ input[type=text], input[type=date] {
 *            MACBOOK AIR 14 INCH            *
 *                                           *
 ********************************************/
-/* for 415px or more */
-@media screen and (min-width: 415px) {
-
+/* for 416px or more */
+@media only screen
+    and (min-width: 416px) {
     html {
-      background: url("../images/emptyroom.jpg") no-repeat center center fixed;
+      background: url("../images/emptyroom.jpg") no-repeat center center /*fixed*/;
       background-size: cover;
     }
     img {
@@ -1671,8 +1915,10 @@ input[type=text], input[type=date] {
     }
   
     .override-position {
-        position:absolute;
-        top: 166px;
+        width: 89.5%;
+        top: 204px;
+        margin-left: 3%;
+
     }
   }
 
